--- a/src/custom.html
+++ b/src/custom.html
@@ -172,7 +172,7 @@ $endif$
 <div class="footer-info">
 <h5 class="footer-title footer-company">Gispo Ltd.
 <span class="footer-copyright-year">© 2023</span></h5>
-<span class="footer-contact-info">Kumpulantie 3, 3. krs
+<span class="footer-contact-info">Kumpulantie 3, 3 krs
 <br>00520 Helsinki, Finland
 <br>info@gispo.fi
 </span>
@@ -188,6 +188,8 @@ $include-after$
 $endfor$
 
 <script src="js/nav-script.js"></script>
+<script src="js/answer-key.js"></script>
+<script src="js/find_keys.js"></script>
 
 </body>
 </html>
